tdf#156270: use double for width/height

Otherwise 0.313159 is rounded to 0

Regression from
    commit 99f43923b66a98b75c78a50577f19293aa480998
    Author: Xisco Fauli <xiscofauli@libreoffice.org>
    Date:   Tue Apr 18 14:37:32 2023 +0200

    sw: fix divide by 0

Change-Id: Ib8bf0a770834e0ff73d215c27788df7a3b98404d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155561
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 6ab45e1e2b256880d2f05b6669eb196e83682a14)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155489
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>